modernize java code